--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   --z-modal: 1000;
 
   /*========== scale ==========*/
+  --scale-sm: 1.01;
   --scale: 1.02;
 }
 
@@ -155,13 +156,13 @@ img {
   background-color: var(--title-color);
   color: var(--container-color);
   padding: 1.25rem 2rem;
-  border-radius: 1rem;
+  border-radius: .8rem;
   font-weight: var(--font-medium);
 }
 
 .button:hover {
   background-color: var(--title-color-dark);
-  scale: var(--scale);
+  scale: var(--scale-sm);
 }
 
 .button__icon {
