--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,7 @@ img {
   padding: 1.25rem 2rem;
   border-radius: .8rem;
   font-weight: var(--font-medium);
+  transition: .3s;
 }
 
 .button:hover {
