--- a/src/App.css
+++ b/src/App.css
@@ -156,9 +156,9 @@ img {
   background-color: var(--title-color);
   color: var(--container-color);
   padding: 1.25rem 2rem;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   font-weight: var(--font-medium);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .button:hover {
